--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="porcelain">#FFEFF3F2</color>
+    <color name="emerald">#FF2DC44D</color>
+    <color name="nandor">#FF52605E</color>
+    <color name="nevada">#696E70</color>
+    <color name="prussian_blue">#FF012646</color>
+    <color name="azure_radiance">#FF007AFF</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
