--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.AirlineTicketApp" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.AirlineTicketApp" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/prussian_blue</item>
         <item name="colorPrimaryVariant">@color/porcelain</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/emerald</item>
         <item name="colorSecondaryVariant">@color/emerald</item>
         <item name="colorOnSecondary">@color/black</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 </resources>
