--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -49,5 +49,6 @@
         <item name="iconTint">@color/emerald</item>
         <item name="iconSize">32dp</item>
         <item name="cornerRadius">0dp</item>
+        <item name="android:elevation">10dp</item>
     </style>
 </resources>
