--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="iron">#FFDFE3E2</color>
     <color name="porcelain">#FFEFF3F2</color>
     <color name="emerald">#FF2DC44D</color>
     <color name="nandor">#FF52605E</color>
@@ -9,5 +10,4 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#00FFFFFF</color>
-
 </resources>
