--- a/app/src/main/res/layout/fragment_flights_list.xml
+++ b/app/src/main/res/layout/fragment_flights_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,6 +27,7 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
+                        android:id="@+id/imageView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/app_name"
@@ -35,6 +37,95 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <LinearLayout
+                        android:paddingStart="@dimen/padding_14dp"
+                        android:paddingEnd="@dimen/padding_0dp"
+                        android:layout_width="@dimen/width_0dp"
+                        android:layout_height="match_parent"
+                        android:gravity="center|start"
+                        android:orientation="vertical"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
+                        app:layout_constraintStart_toEndOf="@+id/imageView"
+                        app:layout_constraintTop_toTopOf="parent">
+
+                        <LinearLayout
+                            android:paddingVertical="@dimen/padding_2dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                style="@style/Bold.17.Nandor"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="İstanbul" />
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="@dimen/height_10dp"
+                                android:layout_marginHorizontal="@dimen/margin_5dp"
+                                android:adjustViewBounds="true"
+                                android:src="@drawable/ic_arrow_right" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                style="@style/Bold.17.Nandor"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Amsterdam" />
+
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:paddingVertical="@dimen/padding_2dp"
+                                android:src="@drawable/ic_edit"
+                                app:tint="@color/nandor"
+                                android:contentDescription="@string/app_name" />
+                        </LinearLayout>
+
+                        <LinearLayout
+                            android:paddingVertical="@dimen/padding_2dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:orientation="horizontal">
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                style="@style/Medium.14.Nandor"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="Tek Yön" />
+
+                            <View
+                                android:layout_marginVertical="@dimen/margin_3dp"
+                                android:background="@color/nandor"
+                                android:layout_marginHorizontal="@dimen/margin_5dp"
+                                android:layout_width="@dimen/width_1dp"
+                                android:layout_height="match_parent" />
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:adjustViewBounds="true"
+                                android:paddingVertical="@dimen/padding_1dp"
+                                android:src="@drawable/ic_person"
+                                app:tint="@color/nandor"
+                                android:contentDescription="@string/app_name" />
+
+                            <androidx.appcompat.widget.AppCompatTextView
+                                style="@style/Medium.14.Nandor"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                tools:text="1" />
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
@@ -49,7 +140,7 @@
                             app:icon="@drawable/ic_heart" />
 
                         <View
-                            android:layout_width="@dimen/width_10dp"
+                            android:layout_width="@dimen/width_8dp"
                             android:layout_height="wrap_content" />
 
                         <com.google.android.material.button.MaterialButton
@@ -68,7 +159,6 @@
                     android:background="@color/white"
                     android:gravity="end"
                     android:orientation="horizontal">
-
 
                     <com.google.android.material.tabs.TabLayout
                         android:layout_width="0dp"
@@ -91,7 +181,6 @@
                             android:text="@string/filter" />
                     </com.google.android.material.tabs.TabLayout>
 
-
                     <com.google.android.material.button.MaterialButton
                         style="@style/CabirApp.IconButton.Elevated.Square"
                         android:layout_width="wrap_content"
@@ -105,13 +194,13 @@
         </com.google.android.material.card.MaterialCardView>
 
         <LinearLayout
-            android:paddingVertical="@dimen/padding_14dp"
             android:id="@+id/buttonGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/transparent"
             android:orientation="horizontal"
             android:paddingHorizontal="@dimen/padding_16dp"
+            android:paddingVertical="@dimen/padding_14dp"
             app:layout_constraintTop_toBottomOf="@+id/cardViewAppBar">
 
             <com.google.android.material.button.MaterialButton
@@ -143,8 +232,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_0dp"
+            android:paddingHorizontal="@dimen/padding_10dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/buttonGroup" />
+            app:layout_constraintTop_toBottomOf="@id/buttonGroup"
+            tools:listitem="@layout/item_flight_info" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
