--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,113 @@
 <resources>
     <style name="CabirApp" />
 
+    <style name="Medium">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textFontWeight">400</item>
+    </style>
+
+    <style name="SemiBold">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textFontWeight">500</item>
+    </style>
+
+    <style name="Bold">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textFontWeight">600</item>
+    </style>
+
+    <style name="Medium.12">
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <style name="Medium.13">
+        <item name="android:textSize">13sp</item>
+    </style>
+
+    <style name="Medium.14">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Medium.16">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Medium.18">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Medium.20">
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="Bold.12">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Bold.14">
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Bold.16">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Bold.17">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="Bold.18">
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="Medium.12.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Medium.13.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Medium.14.Nevada">
+        <item name="android:textColor">@color/nevada</item>
+    </style>
+
+    <style name="Medium.14.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Medium.16.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Medium.16.Nevada">
+        <item name="android:textColor">@color/nevada</item>
+    </style>
+
+    <style name="Medium.16.Emerald">
+        <item name="android:textColor">@color/emerald</item>
+    </style>
+
+    <style name="Bold.12.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Bold.14.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Bold.16.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Bold.17.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
+    <style name="Bold.18.Nandor">
+        <item name="android:textColor">@color/nandor</item>
+    </style>
+
     <style name="CabirApp.Button">
         <item name="iconGravity">textStart</item>
         <item name="iconPadding">10dp</item>
@@ -29,8 +136,8 @@
         <item name="iconTint">@color/nandor</item>
         <item name="cornerRadius">12dp</item>
         <item name="android:stateListAnimator">@null</item>
-        <item name="android:minWidth">@dimen/width_47dp</item>
-        <item name="android:minHeight">@dimen/height_43dp</item>
+        <item name="android:minWidth">@dimen/width_45dp</item>
+        <item name="android:minHeight">@dimen/height_40dp</item>
     </style>
 
     <style name="CabirApp.IconButton.Azure">
