--- a/app/src/main/res/layout/fragment_flights_list.xml
+++ b/app/src/main/res/layout/fragment_flights_list.xml
@@ -161,25 +161,19 @@
                     android:orientation="horizontal">
 
                     <com.google.android.material.tabs.TabLayout
+                        android:id="@+id/flightsTabLayout"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="1">
+                        app:tabIndicatorColor="@color/emerald"
+                        app:tabSelectedTextColor="@color/emerald"
+                        app:tabTextColor="@color/emerald"
+                        app:tabMode="scrollable"
+                        android:layout_weight="1" />
 
-                        <com.google.android.material.tabs.TabItem
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="@string/filter" />
-
-                        <com.google.android.material.tabs.TabItem
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="@string/filter" />
-
-                        <com.google.android.material.tabs.TabItem
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:text="@string/filter" />
-                    </com.google.android.material.tabs.TabLayout>
+                    <androidx.viewpager2.widget.ViewPager2
+                        android:id="@+id/flightsViewPager"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/height_0dp"/>
 
                     <com.google.android.material.button.MaterialButton
                         style="@style/CabirApp.IconButton.Elevated.Square"
