--- a/app/src/main/res/layout/fragment_flights_list.xml
+++ b/app/src/main/res/layout/fragment_flights_list.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewModel"
+            type="com.cabir.airlineticketapp.ui.flights.FlightsListViewModel" />
+    </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -59,20 +66,21 @@
                                 style="@style/Bold.17.Nandor"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="İstanbul" />
+                                tools:text="İstanbul" />
 
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="@dimen/height_10dp"
                                 android:layout_marginHorizontal="@dimen/margin_5dp"
                                 android:adjustViewBounds="true"
-                                android:src="@drawable/ic_arrow_right" />
+                                android:src="@drawable/ic_arrow_right"
+                                android:contentDescription="@string/app_name" />
 
                             <androidx.appcompat.widget.AppCompatTextView
                                 style="@style/Bold.17.Nandor"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Amsterdam" />
+                                tools:text="Amsterdam" />
 
 
                             <ImageView
@@ -96,7 +104,7 @@
                                 style="@style/Medium.14.Nandor"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                tools:text="Tek Yön" />
+                                android:text="@string/one_direction" />
 
                             <View
                                 android:layout_marginVertical="@dimen/margin_3dp"
