--- a/app/src/main/res/layout/fragment_flights_list.xml
+++ b/app/src/main/res/layout/fragment_flights_list.xml
@@ -230,6 +230,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:adapter="@{viewModel.adapter}"
             android:layout_width="match_parent"
             android:layout_height="@dimen/height_0dp"
             android:paddingHorizontal="@dimen/padding_10dp"
